--- a/portfolioWebsite/src/main/resources/templates/contact.html
+++ b/portfolioWebsite/src/main/resources/templates/contact.html
@@ -50,8 +50,7 @@
                                     <div class="info-item" data-aos="fade" data-aos-delay="200">
                                         <i class="bi bi-geo-alt"></i>
                                         <h3>Address</h3>
-                                        <p>A108 Adam Street</p>
-                                        <p>인천, NY 535022</p>
+                                        <p>인천 남동구 구월동 1554</p>
                                     </div>
                                 </div><!-- End Info Item -->
 
