--- a/portfolioWebsite/src/main/resources/templates/index.html
+++ b/portfolioWebsite/src/main/resources/templates/index.html
@@ -1,6 +1,5 @@
-<!doctype html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<!DOCTYPE html>
+<html lang="ko">
 
 <head>
     <meta charset="utf-8">
@@ -27,11 +26,6 @@
 
     <!-- Main CSS File -->
     <link href="/static/bootstrap/assets/css/main.css" rel="stylesheet">
-    <style>
-    	#header {
-    		border-bottom: 1px solid #000;
-    	}
-    </style>
 
     <!-- =======================================================
     * Template Name: FlexStart
@@ -47,14 +41,14 @@
         <div class="container-fluid container-xl position-relative d-flex align-items-center">
             <a th:href="@{/home}" class="logo d-flex align-items-center me-auto">
                 <!-- Uncomment the line below if you also wish to use an image logo -->
-                <h1 class="sitename">Portfolio</h1>
+                <h1 class="sitename">HJH's Portfolio</h1>
             </a>
             <div id="navmenu" class="navmenu">
                 <ul>
                     <li><a th:href="@{/home}" class="nav-link">Home<br></a></li>
-                    <li><a th:href="@{/about}" class="nav-link">내 정보</a></li>
-                    <li><a th:href="@{/tech-stack}" class="nav-link">기술스택</a></li>
-                    <li><a th:href="@{/portfolio}" class="nav-link">포트폴리오</a></li>
+                    <li><a th:href="@{/about}" class="nav-link">About Me</a></li>
+                    <li><a th:href="@{/tech-stack}" class="nav-link">Tech Stack</a></li>
+                    <li><a th:href="@{/portfolio}" class="nav-link">Portfolio</a></li>
                     <li><a th:href="@{/contact}" class="nav-link">Contact Me</a></li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -66,7 +60,7 @@
     <div layout:fragment="content"></div>
     <!-- 기본 템플릿 안에 삽입될 내용 End -->
     <!-- 자바스크립트 Start -->
-    <th:block layout:fragment="script"></th:block>
+    <div layout:fragment="script"></div>
     <!-- 자바스크립트 End -->
 
 
@@ -80,21 +74,11 @@
                     <div class="footer-contact pt-3">
                         <p>A108 Adam Street</p>
                         <p>New York, NY 535022</p>
-                        <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-                        <p><strong>Email:</strong> <span>info@example.com</span></p>
+                        <p class="mt-3"><strong>Phone:</strong> <span>+82 010 4175 6818</span></p>
+                        <p><strong>Email:</strong> <span>h_leopold@naver.com</span></p>
                     </div>
                 </div>
-
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Useful Links</h4>
-                    <ul>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-                    </ul>
-                </div>
-
+<!--
                 <div class="col-lg-2 col-md-3 footer-links">
                     <h4>Our Services</h4>
                     <ul>
@@ -104,13 +88,24 @@
                         <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
                     </ul>
                 </div>
+-->                
+
+				<div class="col-lg-2 col-md-3 footer-links">
+                    <h4>Useful Links</h4>
+                    <ul>
+                        <li><i class="bi bi-chevron-right"></i> <a th:href="@{/home}">Home</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a th:href="@{/about}">About us</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a th:href="@{/tech-stack}">Services</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a th:href="@{/portfolio-details}">Terms of service</a></li>
+                    </ul>
+                </div>
 
                 <div class="col-lg-4 col-md-12">
-                    <h4>Follow Us</h4>
+                    <h4>Follow Me</h4>
                     <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
                     <div class="social-links d-flex">
+                        <a href=""><i class="bi bi-github"></i></a>
                         <a href=""><i class="bi bi-twitter-x"></i></a>
-                        <a href=""><i class="bi bi-facebook"></i></a>
                         <a href=""><i class="bi bi-instagram"></i></a>
                         <a href=""><i class="bi bi-linkedin"></i></a>
                     </div>
@@ -126,7 +121,7 @@
                 <!-- You can delete the links only if you've purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                Designed by <a href="#">BootstrapMade</a>
             </div>
         </div>
 
