--- a/portfolioWebsite/src/main/resources/templates/portfolio-details.html
+++ b/portfolioWebsite/src/main/resources/templates/portfolio-details.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 
-<body class="index-page">
+<body class="portfolio-details-page">
     <div layout:fragment="content">
         <div id="main" class="main">
 
@@ -38,19 +38,19 @@
                         <div class="row d-flex justify-content-center text-center">
                             <div class="col-lg-8">
                                 <h1>Portfolio Details</h1>
-                                <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+                                <p class="mb-0">지금까지 작업한 프로젝트 설명 페이지입니다</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="breadcrumbs">
+                <nav class="breadcrumbs">
                     <div class="container">
                         <ol>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a th:href="@{/home}">Home</a></li>
                             <li class="current">Portfolio Details</li>
                         </ol>
                     </div>
-                </div>
+                </nav>
             </div>
             <!-- End Page Title -->
 
@@ -83,19 +83,35 @@
                                 <div class="swiper-wrapper align-items-center">
 
                                     <div class="swiper-slide">
-                                        <img src="assets/img/portfolio/app-1.jpg" alt="">
+                                        <img src="/static/bootstrap/assets/img/portfolio/014-fin.jpg" alt="">
                                     </div>
 
                                     <div class="swiper-slide">
-                                        <img src="assets/img/portfolio/product-1.jpg" alt="">
+                                        <img src="/static/bootstrap/assets/img/portfolio/015-fin.jpg" alt="">
                                     </div>
 
                                     <div class="swiper-slide">
-                                        <img src="assets/img/portfolio/branding-1.jpg" alt="">
+                                        <img src="/static/bootstrap/assets/img/portfolio/016-fin.jpg" alt="">
                                     </div>
 
                                     <div class="swiper-slide">
-                                        <img src="assets/img/portfolio/books-1.jpg" alt="">
+                                        <img src="/static/bootstrap/assets/img/portfolio/017-fin.jpg" alt="">
+                                    </div>
+
+                                    <div class="swiper-slide">
+                                        <img src="/static/bootstrap/assets/img/portfolio/018-fin.jpg" alt="">
+                                    </div>
+
+                                    <div class="swiper-slide">
+                                        <img src="/static/bootstrap/assets/img/portfolio/019-fin.jpg" alt="">
+                                    </div>
+
+                                    <div class="swiper-slide">
+                                        <img src="/static/bootstrap/assets/img/portfolio/020-fin.jpg" alt="">
+                                    </div>
+
+                                    <div class="swiper-slide">
+                                        <img src="/static/bootstrap/assets/img/portfolio/021-fin.jpg" alt="">
                                     </div>
 
                                 </div>
@@ -107,17 +123,60 @@
                             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
                                 <h3>Project information</h3>
                                 <ul>
-                                    <li><strong>Category</strong>: Web design</li>
-                                    <li><strong>Client</strong>: ASU Company</li>
-                                    <li><strong>Project date</strong>: 01 March, 2020</li>
-                                    <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                                    <li><strong>GitHub</strong>: <a href="https://github.com/backendVirtuoso/portfolio-website">https://github.com/backendVirtuoso/portfolio-website</a></li>
+                                    <li><strong>Frontend</strong>: HTML5, CSS, Vue.js</li>
+                                    <li><strong>Backend</strong>: Jsp, Spring</a></li>
+                                    <li><strong>Database</strong>: MyBatis, PostgreSQL</li>
                                 </ul>
                             </div>
                             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-                                <h2>Exercitationem repudiandae officiis neque suscipit</h2>
-                                <p>
-                                    Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-                                </p>
+                                <h2>프로젝트 주요기능 설명</h2>
+                                <div class="col-lg-8">
+		                            <div class="portfolio-details-slider swiper init-swiper">
+		
+		                                <script type="application/json" class="swiper-config">
+		                                    {
+		                                        "loop": true,
+		                                        "speed": 600,
+		                                        "autoplay": {
+		                                            "delay": 5000
+		                                        },
+		                                        "slidesPerView": "auto",
+		                                        "pagination": {
+		                                            "el": ".swiper-pagination",
+		                                            "type": "bullets",
+		                                            "clickable": true
+		                                        }
+		                                    }
+		                                </script>
+		                                <div class="swiper-wrapper align-items-center">
+		                                	<div class="swiper-slide">
+		                                        <p>1페이지</p>
+		                                    </div>
+		                                	<div class="swiper-slide">
+		                                        <p>2페이지</p>
+		                                    </div>
+		                                	<div class="swiper-slide">
+		                                        <p>3페이지</p>
+		                                    </div>
+		                                	<div class="swiper-slide">
+		                                        <p>4페이지</p>
+		                                    </div>
+		                                	<div class="swiper-slide">
+		                                        <p>5페이지</p>
+		                                    </div>
+		                                	<div class="swiper-slide">
+		                                        <p>6페이지</p>
+		                                    </div>
+		                                	<div class="swiper-slide">
+		                                        <p>7페이지</p>
+		                                    </div>
+		                                	<div class="swiper-slide">
+		                                        <p>8페이지</p>
+		                                    </div>
+		                                </div>
+	                                </div>
+                                </div>
                             </div>
                         </div>
                     </div>
