--- a/portfolioWebsite/src/main/resources/templates/tech-stack.html
+++ b/portfolioWebsite/src/main/resources/templates/tech-stack.html
@@ -30,6 +30,7 @@
 <body class="index-page">
     <div layout:fragment="content">
         <div id="main" class="main">
+        
             <!-- Services Section -->
             <div id="services" class="services section">
 
@@ -46,55 +47,43 @@
 
                         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                             <div class="service-item item-cyan position-relative">
-                                <i class="bi bi-activity icon"></i>
                                 <h3>데이터베이스</h3>
-                                <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
-                                <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                                <p><br>MariaDB, MyBatis, H2 <br> PostgreSQL, OracleDB, MongoDB</p>
                             </div>
                         </div><!-- End Service Item -->
 
                         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                             <div class="service-item item-orange position-relative">
-                                <i class="bi bi-broadcast icon"></i>
                                 <h3>개발 툴</h3>
-                                <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
-                                <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                                <p><br>Visual Studio Code, Eclipse, <br> IntelliJ, Spring Tool Suite 4</p>
                             </div>
                         </div><!-- End Service Item -->
 
                         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
                             <div class="service-item item-teal position-relative">
-                                <i class="bi bi-easel icon"></i>
-                                <h3>라이브러리</h3>
-                                <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
-                                <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                                <h3>프론트엔드</h3>
+                                <p><br>HTML5, CSS, JavaScript, React</p>
                             </div>
                         </div><!-- End Service Item -->
 
                         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
                             <div class="service-item item-red position-relative">
-                                <i class="bi bi-bounding-box-circles icon"></i>
-                                <h3>Asperiores Commodi</h3>
-                                <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-                                <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                                <h3>자격증</h3>
+                                <p><br>정보처리기사, 정보처리산업기사, <br> SQLD, 네트워크관리사2급, 컴퓨터활용능력1급</p>
                             </div>
                         </div><!-- End Service Item -->
 
                         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
                             <div class="service-item item-indigo position-relative">
-                                <i class="bi bi-calendar4-week icon"></i>
-                                <h3>Velit Doloremque.</h3>
-                                <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
-                                <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                                <h3>버전 관리</h3>
+                                <p><br>GitHub, Git, Svn</p>
                             </div>
                         </div><!-- End Service Item -->
 
                         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
                             <div class="service-item item-pink position-relative">
-                                <i class="bi bi-chat-square-text icon"></i>
-                                <h3>Dolori Architecto</h3>
-                                <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
-                                <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                                <h3>백엔드</h3>
+                                <p><br>Java, Jsp, Spring, Spring Boot</p>
                             </div>
                         </div><!-- End Service Item -->
 
