--- a/portfolioWebsite/src/main/resources/templates/index.html
+++ b/portfolioWebsite/src/main/resources/templates/index.html
@@ -50,6 +50,7 @@
                     <li><a th:href="@{/tech-stack}" class="nav-link">Tech Stack</a></li>
                     <li><a th:href="@{/portfolio}" class="nav-link">Portfolio</a></li>
                     <li><a th:href="@{/contact}" class="nav-link">Contact Me</a></li>
+                    <li><a th:href="@{/register}" class="nav-link">Register, Update</a></li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </div>
