--- a/portfolioWebsite/src/main/resources/templates/portfolio-details-register.html
+++ b/portfolioWebsite/src/main/resources/templates/portfolio-details-register.html
@@ -64,7 +64,7 @@
 
                         <div class="col-lg-8">
                             <input type="file" class="form-control" id="imagePath" name="imageFile" multiple>
-                            <img src="/static/bootstrap/assets/img/bg.jpg" id="imagePreview" class="thumbnail" alt="이미지 미리 보기">
+                            <img src="/static/bootstrap/assets/img/imgBg.jpg" id="imagePreview" class="thumbnail" alt="이미지 미리 보기">
                         </div>
 
                         <div class="col-lg-4">
@@ -86,6 +86,10 @@
                                     <li>
                                         <label class="form-label"><strong>Database</strong></label>
                                         <input type="text" class="form-control" id="database" placeholder="데이터베이스 기술스택 입력해주세요">
+                                    </li>
+                                    <li>
+                                        <label class="form-label"><strong>Type</strong></label>
+                                        <input type="text" class="form-control" id="type" placeholder="Team or Individual 입력해주세요">
                                     </li>
                                 </ul>
                             </div>
